# S1_SDK_V2

./: .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  build.sh  install.sh  pyproject.toml  readme.md  readme_beta.md  temp.py
doc/: conda_install.md
examples/python/: MUJOCO_LOG.TXT  check_arm.py  collision.py  common.py  disable.py  enable.py  gravity.py  keyboard_end_effect.py  keyboard_joint.py  keyborad_end_effect.py  keyborad_joint.py  read_pos.py  set_zero_position.py  set_zero_position_gripper.py  set_zero_position_teach_gripper.py  teaching.py  teleop_demo.py  test.py
include/: S1_SDK.hpp  S1_SDK_back.hpp
lib/linux/aarch64/cmake/S1_SDK/: S1_SDKTargets-release.cmake  S1_SDKTargets.cmake
lib/linux/x86_64/cmake/S1_SDK/: S1_SDKTargets-release.cmake  S1_SDKTargets.cmake
lib/macos/arm64/cmake/S1_SDK/: S1_SDKConfig.cmake  S1_SDKTargets.cmake
lib/windows/lib/cmake/S1_SDK/: S1_SDKTargets-release.cmake
src/: S1_interface.cpp
src/S1_SDK/: S1_arm.py  __init__.py
src/S1_SDK/arm_mode/: __init__.py  base_mode.py  only_real.py  only_sim.py  real_control_sim.py
src/S1_SDK/hardware/: __init__.py  collision.py  motor_interface.pyi  mujoco_sim.py
src/S1_SDK/resource/: gripper.xml  gripper_less.xml  mix.xml  scene.xml  teach.xml
src/S1_SDK/resource/meshes/: 1_Link.STL  2_Link.STL  3_Link.STL  4_Link.STL  5_Link.STL  6_Link.STL  7_Link.STL  8_1_Link.STL  8_2_Link.STL  9_1_Link.STL  9_2_Link.STL  DM13urdf.urdf  S1_urdf.urdf  base_link.STL  gripper.urdf  gripper.xml  gripper_less.urdf  gripper_less.xml  teach.STL
src/S1_SDK_C++/: common.hpp  control_pos_vel.cpp  disable.cpp  enable.cpp  graivty.cpp  gravity.cpp  read_pos.cpp  set_end_zero_pos.cpp  set_zero_pos.cpp
